// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Text> when {body level:1} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {body level:2} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {body level:3} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {caption level:1} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {caption level:2} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {
        "color": "#ef5160",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:0} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:1} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:2} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:3} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:4} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:5} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline level:6} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {lighten} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      undefined,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {
        "color": "orange",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle level:1} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle level:2} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle level:3} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;
